# mnist

./: .gitignore  Dockerfile  Untitled.ipynb  b.sh  pyproject.toml  run.sh  run_db.sh
note/: predict.ipynb
src/mnist/: db.py  main.py  worker.py
