[project]
name = "mnist"
version = "0.1.0"
description = "MNIST"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
