[project]
name = "mnist"
version = "0.4.0"
description = "MNIST"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "pytz>=2024.2",
    "PyMySQL>=1.1.1",
    "requests>=2.32.3",
    "pillow>=10.4.0",
    "tensorflow>=2.17.0",
    "keras>=3.5.0",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.2",
    "scikit-image>=0.24.0",
    "opencv-python>=4.10.0.84",
    "pydot>=3.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ml-worker = 'mnist.worker:run'

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
test = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
